appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
# Accounts drawer doesn't open if no accounts are present
- tapOn: 'My accounts'
- assertNotVisible:
    id: 'accountSelectorSettingsButton'
- runFlow:
    file: ../shared/add-wallet.yaml
# Accounts drawer should open now
- tapOn: 'My accounts'
- assertVisible: 'Accounts'
- assertVisible:
    id: 'accountSelectorSettingsButton'
- tapOn:
    id: 'accountSelectorSettingsButton'
- assertVisible: 'WALLETS'
