appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
- tapOn:
    id: 'actionBarReceiveButton'
- assertVisible:
    id: 'selectAccountHeader'
# make sure native segwit is working
- tapOn:
    id: 'walletListAccountCard-0'
- tapOn:
    id: 'receiveAssetItem-native_segwit'
- assertVisible:
    id: 'addressTypeBadge-Native Segwit'
- tapOn:
    id: 'backButton'
# make sure taproot is working
- tapOn:
    id: 'receiveAssetItem-taproot'
- assertVisible:
    id: 'receiveAssetDescription-taproot'
- assertVisible:
    id: 'addressTypeBadge-Taproot'
- tapOn:
    id: 'backButton'
# make sure stacks is working
- tapOn:
    id: 'receiveAssetItem-stacks'
- assertVisible:
    id: 'receiveAssetDescription-stacks'
# make sure share is working
- tapOn:
    id: 'receiveAssetShareButton'
- assertVisible: 'Copy'
- assertVisible: 'Save to Files'
- tapOn:
    id: UICloseButtonBackground
- tapOn:
    id: 'backButton'
- tapOn:
    id: 'backButton'
- assertVisible:
    id: 'selectAccountHeader'
