appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
- assertNotVisible:
    id: 'toastContainer'
- tapOn:
    id: 'homeSettingsButton'
- tapOn:
    id: 'settingsWalletAndAccountsButton'
- tapOn:
    id: 'walletListAccountCard'
- tapOn:
    id: 'walletSettingsAccountNameCell'
# Doing this because iOS input is a bit flaky on maestro,
# It's known issue and they are on it.
# https://maestro.mobile.dev/api-reference/commands/erasetext
- longPressOn:
    id: 'accountChangeNameSheetInput'
- tapOn: 'Select All'
- eraseText
# This text input is unreliable so sometimes doesn't finish typing
- inputText: 'test'
- tapOn:
    id: 'accountChangeNameSheetSaveButton'
# Its safer to assert that the old name is not visible
- assertNotVisible: '~contains Account 1'
