appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
- assertNotVisible:
    id: 'toastContainer'
- tapOn:
    id: 'homeSettingsButton'
- tapOn:
    id: 'settingsWalletAndAccountsButton'
- tapOn:
    id: 'walletListSettingsButton'
    index: 0
- tapOn:
    id: 'walletSettingsRenameWalletButton'
# Doing this because iOS input is a bit flaky on maestro,
# It's known issue and they are on it.
# https://maestro.mobile.dev/api-reference/commands/erasetext
- longPressOn:
    id: 'walletChangeNameSheetInput'
- tapOn: 'Select All'
- eraseText
- inputText: 'new name'
- tapOn:
    id: 'walletChangeNameSheetSaveButton'
# Its safer to assert that the old name is not visible
- assertNotVisible:
    text: '~contains Wallet 1'
