appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- tapOn:
    text: 'Add Wallet'
- tapOn:
    id: 'restoreWalletSheetButton'
# verify advanced options appear
- assertVisible:
    id: 'restoreWalletPassphraseTitle'
- tapOn:
    id: 'restoreWalletAdvancedOptionsButton'
- tapOn:
    id: 'restoreWalletAdvancedOptionsPassphraseToggle'
- tapOn:
    id: 'restoreWalletPassphraseInput'
- inputText: 'test'
- tapOn:
    id: 'restoreWalletPassphraseSubmit'
- tapOn: 'Advanced options'
- assertNotVisible:
    id: 'restoreWalletAdvancedOptionsPassphraseToggle'
# FIXME - re-enable the remainder of this flow once issues with Allow Paste are resolved
# check validation of invalid mnemonic
# - tapOn:
#     id: 'restoreWalletTextInput'
# - runFlow:
#     when:
#       visible: 'Allow Paste'
#     commands:
#       - tapOn: 'Allow Paste'
# # - inputText: "~input-field", "your text here"
# - inputText: 'definitely not a mnemonic'
# - pressKey: Enter
# - assertVisible:
#     id: 'textInputErrorMessage'

# stuck here on allow paste
# - tapOn:
#     id: 'restoreWalletTextInput'
# - eraseText: 26
# - tapOn:
#     id: 'backButton'
# - tapOn:
#     text: 'Add Wallet'
# # verify validation of valid mnemonic
# - tapOn:
#     id: 'createNewWalletButton'
# - tapOn:
#     id: 'walletCreationTapToReveal'
# - tapOn:
#     text: 'Copy'
# - tapOn:
#     id: 'backButton'
# - tapOn:
#     text: 'Add Wallet'
# - tapOn:
#     id: 'restoreWalletSheetButton'
# - assertNotVisible: 'Invalid words: definitely, not, a, mnemonic'
# # running paste in test is unreliable as simulator prompts for permission
# # - tapOn:
# #     text: 'Paste'
# - tapOn:
#     text: 'Continue'
# - tapOn:
#     text: 'Skip for now'
# - tapOn:
#     text: 'Proceed'
# - assertVisible:
#     id: 'homeAccountCard-0'
