appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../../shared/clean-up.yaml
- runFlow:
    file: ../../shared/add-wallet.yaml
    env:
      SECURE: yes
- runFlow:
    file: ../../shared/unlock.yaml
    when:
      visible: Passcode field
- assertNotVisible:
    id: 'toastContainer'
- tapOn:
    id: 'homeSettingsButton'
- tapOn:
    id: 'settingsWalletAndAccountsButton'
- tapOn:
    id: 'walletListSettingsButton'
    index: 0
- tapOn:
    id: 'walletSettingsRemoveWalletButton'
- tapOn:
    id: 'warningSubmitButton'
- tapOn:
    id: 'backButton'
- tapOn:
    id: 'backButton'
# - assertVisible:
#     id: 'homeCreateWalletCard'
# This test still fails because the app crashes when the wallet is deleted!
#  - it seems to also have issues with entering the passcode
# TODO - fix this PRO-4
