appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
- tapOn:
    id: 'actionBarSendButton'
- assertVisible:
    id: 'selectAssetHeader'
- tapOn:
    id: 'assetPickerItem'
    index: 0
- assertVisible:
    id: 'sendFormHeader'
