appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
- tapOn: My accounts
- tapOn:
    id: 'accountSelectorSettingsButton'
- tapOn: Wallet 1
- assertNotVisible: Add account
- assertNotVisible:
    id: 'homeAccountCard-0'
- tapOn: Wallet 1
- tapOn:
    id: 'walletListSettingsButton'
- tapOn:
    id: 'walletSettingsRemoveWalletButton'
- tapOn:
    id: 'warningCancelButton'
- tapOn:
    id: 'walletSettingsRemoveWalletButton'
- assertVisible:
    id: 'warningSheet'
- tapOn:
    id: 'warningSubmitButton'
- tapOn:
    id: 'backButton'
# Ensure wallet is removed and not other wallets are present
- assertNotVisible: Wallet 1
- assertVisible:
    id: 'homeAddWalletButton'
