appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
# add a second wallet - TODO move into flow
- tapOn:
    id: 'addAccountCard'
- tapOn:
    id: 'createNewWalletSheetButton'
- tapOn:
    id: 'createNewWalletButton'
- tapOn:
    id: 'walletCreationBackedUpButton'
- assertVisible:
    id: 'homeAccountCard-0'
- assertVisible:
    id: 'homeAccountCard-1'
# FIXME change this to an ID
- tapOn: 'My accounts'
# - tapOn:
#     id: 'accountsWidgetTitle'
- assertVisible:
    id: 'accountCard-0'
- assertVisible:
    id: 'accountCard-1'
# test multi wallethidden accounts
- tapOn:
    id: 'accountSelectorSettingsButton'
- tapOn:
    id: 'walletListAccountCard'
    index: 0
- tapOn:
    id: 'accountSettingsHideAccountButton'
- tapOn:
    id: 'backButton'
- tapOn:
    id: 'walletSettingsHiddenAccountsButton'
- assertVisible:
    id: 'walletListAccountCard'
- tapOn:
    id: 'backButton'
- tapOn:
    id: 'walletSettingsHiddenAccountsButton'
- assertVisible: 'Wallet 1'
# ensure wallet 2 is not visible as no hidden accounts
- assertNotVisible: 'Wallet 2'
- tapOn:
    id: 'backButton'
- tapOn:
    id: 'walletListSettingsButton'
    index: 0
- tapOn:
    id: 'walletSettingsRemoveWalletButton'
- tapOn:
    id: 'warningSubmitButton'
- tapOn:
    id: 'backButton'
