appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
- assertNotVisible:
    id: 'toastContainer'
- tapOn:
    id: 'homeSettingsButton'
- tapOn:
    id: 'settingsWalletAndAccountsButton'
- tapOn:
    id: 'walletListAccountCard'
- tapOn:
    text: 'Avatar'
- tapOn:
    id: 'defaultAccountIcon_alien'
- tapOn:
    id: 'backButton'
- assertVisible:
    id: 'defaultAccountIcon_sparkles'
- tapOn:
    text: 'Avatar'
- tapOn:
    id: 'defaultAccountIcon_alien'
- tapOn:
    text: 'Confirm'
- assertVisible:
    id: 'defaultAccountIcon_alien'
- tapOn:
    id: 'backButton'
- assertVisible:
    id: 'defaultAccountIcon_alien'
