appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
- assertNotVisible:
    id: 'toastContainer'
- tapOn:
    id: 'homeSettingsButton'
- tapOn:
    text: 'Wallets and accounts Add, configure and remove'
- tapOn:
    id: 'walletListAccountCard'
- tapOn:
    text: 'Hide account'
- assertVisible: 'Un-hide account'
- tapOn:
    id: 'backButton'
- assertNotVisible:
    id: 'walletListAccountCard'
- tapOn:
    text: 'Hidden accounts 1 hidden accounts'
- tapOn:
    id: 'walletListAccountCard'
- tapOn: Un-hide account
- tapOn:
    id: 'backButton'
- tapOn:
    id: 'backButton'
- assertNotVisible: Hidden accounts 0 hidden accounts
